fix link highlight in dark mode

--- a/src/ui/styles/style.css
+++ b/src/ui/styles/style.css
@@ -57,7 +57,7 @@
         --green: #00a651;
         --blue: #2e3192;
         --cyan: #00aeef;
-        --yellow: #fff200;
+        --yellow: #b6af0b;
         --orange: #ff9f00;
         --magenta: #ec008c;
         --black: #ffffff;
